<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Graceful Chess</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="pass_play">Pass &amp; Play</string>
    <string name="network_game">Online</string>
    <string name="search_hint">Search for a player&#8230;</string>
    <string name="search_btn_label">Search</string>
    <string name="next_page">Next</string>
    <string name="previous_page">Prev</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_new_game">NewGameActivity</string>
    <string name="action_settings">Settings</string>
    <string name="player_white">White</string>
    <string name="player_black">Black</string>
    <string name="select_modes">Select Player Modes</string>
    <string name="white_select_scanning">White Scanning Mode</string>
    <string name="black_select_scanning">Black Scanning Mode</string>
    <string name="title_activity_game_settings_pnp">GameSettingsPnp</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="back_homescreen">Back to Home Screen</string>

</resources>
